<resources>
    <!--EquipmentActivity-->
    <string name="equipment_activity_title">Локомотивы</string>
    <string name="equipment_activity_percent">%1$d%%</string>
    <string name="equipment_activity_locomotive_title">%1$s %2$s </string>
    <string name="equipment_activity_section_title">%1$s %2$s%3$s</string>
    <string name="equipment_rep_type_menu_item">Виды ремонта</string>
    <string name="section_repair_type">(%s)</string>

    <!--MainDrawerView-->
    <string name="main_drawer_name">%1$s %2$s</string>
    <string name="main_drawer_equipment">Текущий локомотив/секция</string>
    <string name="main_drawer_equipment_not_chosen">Не выбрано</string>
    <string name="main_drawer_inspection">Инспекционный контроль</string>
    <string name="main_drawer_repair_book">Книга ремонтов</string>
    <string name="main_drawer_сheck_list">Чек-лист приёмки</string>
    <string name="main_drawer_unit_info">Сводная информация</string>
    <string name="main_drawer_message">Сообщения</string>
    <string name="main_drawer_phonebook">Справочник сотрудников</string>
    <string name="main_drawer_exit">Выход</string>
    <string name="main_drawer_version">Версия %1$s</string>

    <!--InspectionActivity-->
    <string name="inspection_activity_title">Инспекционный контроль. %1$s </string>
    <string name="inspection_activity_cyclic_work">Цикловые работы (%1$d)</string>
    <string name="inspection_activity_remark_otk">Приемка. Замечания (%1$d)</string>
    <string name="inspection_activity_remark_rzd">Замечания РЖД (%1$d)</string>
    <string name="inspection_activity_control_point">КТ</string>
    <string name="inspection_activity_comment">комм.</string>
    <string name="inspection_activity_photo">фото</string>
    <string name="inspection_activity_master">мастер</string>
    <string name="inspection_activity_otk">отк</string>
    <string name="inspection_activity_rzd">ржд</string>
    <string name="inspection_activity_accept_all">Принять все</string>
    <string name="inspection_activity_new_remark">Новое замечание</string>
    <string name="inspection_activity_remark_info">%1$d / %2$s / %3$s</string>
    <string name="inspection_activity_not_work_yet">Работы еще не заведены</string>
    <string name="inspection_activity_filter">Все / Активные</string>
    <string name="inspection_menu_title">Пригласить сотрудника РЖД</string>
    <string name="inspection_rzd_successfully_notified">Пригласить сотрудника РЖД</string>

    <!--WorkStatus-->
    <string name="work_status_new">Новая</string>
    <string name="work_status_not_approved">Не согласована</string>
    <string name="work_status_in_work">Исполняется</string>
    <string name="work_status_done">Выполнена</string>
    <string name="work_status_master_accepted">Принята мастером</string>
    <string name="work_status_sld_accepted">Принята ОКТ</string>
    <string name="work_status_rzd_accepted">Принята РЖД</string>
    <string name="work_status_in_task">В ожидании</string>

    <!--CyclicWork Fragment-->
    <string name="cyclic_work_fragment_work_count">Работ - %1$d</string>

    <!--DeclinedReason Activity-->
    <string name="declined_reasson_title">Причины удаления замечания</string>

    <!--Control Point Activity-->
    <string name="control_point_activity_title">Контрольные точки. %1$s </string>

    <!--RemarkSearchActivity-->
    <string name="remark_search_title">Добавление замечания. Выбор замечания</string>
    <string name="remark_search_empty_remark_error">Невозможно создать замечание без названия</string>
    <string name="remark_search_already_added">Замечание уже создано</string>

    <!--CustomRemarkDialog-->
    <string name="custom_remark_dialog_title">Вы действительно хотите добавить замечание?</string>
    <string name="custom_remark_dialog_agree">Да</string>
    <string name="custom_remark_dialog_canceled">Отмена</string>

    <!--CommentActivity-->
    <string name="comment_activity_input_comment">Ввод комментария</string>
    <string name="comment_activity_return_reason">Укажите причину возврата</string>
    <string name="comment_dialog_hint">Текст комментария</string>

    <!--SummaryActivity-->
    <string name="summary_activity_title">Сводная информация. %1$s</string>
    <string name="summary_activity_cyclic">Цикловые работы</string>
    <string name="sumamry_activity_otk">Замечания ОТК</string>
    <string name="summary_activity_rzd">Замечания РЖД</string>
    <string name="summary_activity_accepted">Принято</string>
    <string name="summary_activity_declined">Не принято ОТК</string>
    <string name="summary_activity_declined_rjd">Не принято РЖД</string>
    <string name="summary_activity_accept_button">Подтвердить приемку</string>
    <string name="summary_activity_percent">%1$d%%</string>
    <string name="summary_activity_attention">Внимание!</string>
    <string name="summary_activity_attention_description">Не все пункты приемки подтверждены!</string>
    <string name="summary_activity_ok">ОК</string>

    <!--CheckListActivity-->
    <string name="check_list_activity_title">Чек-лист приемки. %1$s</string>
    <string name="check_list_activity_comment">комм.</string>
    <string name="check_list_activity_photo">фото</string>
    <string name="check_list_activity_master">мастер</string>
    <string name="check_list_activity_otk">отк</string>
    <string name="check_list_activity_rzd">ржд</string>
    <string name="check_list_activity_filter">Все / Активные</string>
    <string name="check_list_activity_rate_value">Показатель нормы: %1$s</string>

    <!--RepairBookActivity-->
    <string name="repair_book_activity_title">Книга ремонта. %1$s</string>
    <string name="repair_book_activity_no_data">Нет данных</string>

    <!--PrintActivity-->
    <string name="print_activity_title">Настройка печати. %1$s</string>
    <string name="print_activity_work_list">Список документов</string>
    <string name="print_activity_check_all">Выбрать все</string>
    <string name="print_activity_reset_all">Сбросить выбор</string>
    <string name="print_activity_signers">Подписанты</string>
    <string name="print_activity_clear_all">Очистить все</string>
    <string name="print_activity_accept">Принял</string>
    <string name="print_activity_check">Проверил</string>
    <string name="print_activity_control">Нормоконтроль</string>
    <string name="print_activity_approve">Утвердил</string>
    <string name="print_activity_print">Отправить на печать</string>
    <string name="print_activity_no_documents">Должен быть выбран хотя бы один документ!</string>
    <string name="print_activity_no_signers">Должен быть назначен хотя бы один ответственный!</string>

    <!--SignersView-->
    <string name="print_activity_splash">Необходимо добавить подписантов</string>

    <!--DeleteSigner Dialog-->
    <string name="delete_signers_attention">Внимание!</string>
    <string name="delete_signers_description">Вы действительно хотите удалить всех подписантов?</string>
    <string name="delete_signers_cancel">Отмена</string>
    <string name="delete_signers_delete">Удалить</string>

    <!--SignerSeacrhActivity-->
    <string name="signer_search_activity_title">Добавление подписантов</string>

    <!--EnterEmailDialog-->
    <string name="enter_email_title">Введите E-mail</string>
    <string name="enter_email_cancel">Отмена</string>
    <string name="enter_email_send">Отправить</string>
    <string name="sign">Прикрепить выбранных участников</string>

    <!--MeasurementActivity!-->
    <string name="measurements_no_data">Замеров по данной работе не найдено</string>
    <string name="inspection_activity_measurements">замеры</string>
    <string name="measurement_value_false">Нет</string>
    <string name="measurement_name_value">%1$s\n%2$s</string>
    <string name="measurement_name_value_empty">%1$s</string>
    <string name="measurement_value_true">Да</string>
    <string name="measurement_title">Замеры по работе</string>
    <string name="measurement_comment">Комментарий</string>
    <string name="measurement_name">Показатель</string>
    <string name="measurement_value">Значение</string>
    <string name="measurement_norm">Норма</string>
    <string name="measurement_type">Тип \nзамера</string>
    <string name="measurement_worker">Сотрудник</string>
    <string name="measurement_date">Дата</string>
    <string name="measurement_type_false">Ручной</string>
    <string name="measurement_type_true">Аппаратный</string>

    <!--RepairTypesFilterDialog-->
    <string name="dialog_repair_type_filter_cancel_btn">Сброс</string>
    <string name="dialog_repair_type_filter_accept_btn">Применить</string>
    <string name="dialog_repair_type_filter_title">Вид ремонта:</string>

</resources>
