<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="512dp"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    tools:ignore="SpUsage">


    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="22dp"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:includeFontPadding="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/delete_signers_attention"
        android:textAllCaps="true"
        android:textColor="@color/appBlack"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/message_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="22dp"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:includeFontPadding="false"
        android:layout_below="@+id/message"
        android:textSize="16dp"
        android:text="@string/delete_signers_description"
        android:textColor="@color/appBlack"
        android:gravity="center"
        />

    <android.widget.Button
        android:id="@+id/delete_signers"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:background="@drawable/red_button"
        android:layout_below="@+id/message_title"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="64dp"
        android:text="@string/delete_signers_delete"
        android:textColor="@color/appWhite"
        android:textAllCaps="true"/>

    <android.widget.Button
        android:id="@+id/cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_btn"
        android:layout_below="@+id/message_title"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="64dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/delete_signers_cancel"
        android:textColor="@color/appWhite"
        android:textAllCaps="true"/>

</RelativeLayout>